@@ -1,9 +1,11 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
-o [NSE] Added clamav-exec to detect ClamAV servers vulnerable to unauthorized   
+o [GH#279][Zenmap] Added a legend for the Topography window. [Suraj Hande]
+
+o [NSE] Added clamav-exec to detect ClamAV servers vulnerable to unauthorized
   clamav command execution. [Paulino Calderon]
 
-o [NSE] Added http-aspnet-debug to detect ASP.NET applications with  
+o [NSE] Added http-aspnet-debug to detect ASP.NET applications with
   debugging enabled. Script submitted by Josh Amishav-Zlatin. [Paulino Calderon]
 
 o Nmap can now make full use of Npcap, the Nmap Project's packet sniffing
